--- a/CodeAnchorAndroid/app/src/main/res/values/strings.xml
+++ b/CodeAnchorAndroid/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CodeAnchorAndroid</string>
+    <string name="app_name">NIBS</string>
     <string name="title_activity_main">MainActivity</string>
 
     <string name="title_section1">Section 1</string>
